Add first pass, no letters.

--- a/index.html
+++ b/index.html
@@ -9,6 +9,15 @@
     <script src="js/scripts.js" charset="utf-8"></script>
   </head>
   <body>
-    
+    <div class="container">
+      <h1>Roman Numeral Convertion</h1>
+      <p><b>Enter any numbers from 1 - 3,999</b></p>
+      <form id="roman">
+        <label for="numbers">Your Numbers:</label>
+        <input type="number" id="numbers"><br>
+        <button type="submit" class="btn btn-danger">Convert!</button>
+      </form>
+      <span id="results"></span>
+    </div>
   </body>
 </html>
