--- a/index.html
+++ b/index.html
@@ -11,9 +11,9 @@
   <body>
     <div class="container">
       <h1>Roman Numeral Convertion</h1>
-      <p><b>Enter any numbers from 1 - 3,999</b></p>
+      <p><b>Enter any number from 1 - 3,999</b></p>
       <form id="roman">
-        <label for="numbers">Your Numbers:</label>
+        <label for="numbers">Your Number:</label>
         <input type="number" id="numbers"><br>
         <button type="submit" class="btn btn-danger">Convert!</button>
       </form>
